src/tests/fixtures/interfaces/TagAttachedToWrongNode.ts.expected
-----------------
INPUT
----------------- 
/** @gqlInterface Person */
function Foo() {}

-----------------
OUTPUT
-----------------
src/tests/fixtures/interfaces/TagAttachedToWrongNode.ts:1:5 - error: `@gqlInterface` can only be used on interface declarations.

1 /** @gqlInterface Person */
      ~~~~~~~~~~~~~~~~~~~~~
